[USA-6] Oculto el botón historial si no tiene conversaciones guardadas

--- a/res/layout/activity_talker_main.xml
+++ b/res/layout/activity_talker_main.xml
@@ -48,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:visibility="gone"
         android:drawableTop="@drawable/history_panel"
         android:text="@string/history_panel" />
 
