--- a/res/layout/calculator.xml
+++ b/res/layout/calculator.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:background="@drawable/grid_color_selector"
@@ -11,21 +11,23 @@
 
     <TextView
         android:id="@+id/calc_text"
-        android:layout_width="match_parent"
+        android:layout_width="236dp"
         android:layout_height="25dp"
+        android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:focusable="false"
-        android:gravity="center"
-        android:textSize="20sp" >
+        android:gravity="left"
+        android:textSize="25sp" >
 
     </TextView>
 
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:columnCount="9"
-        android:rowCount="4"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:rowCount="4" >
 
         <Button
             android:id="@+id/button1"
@@ -35,7 +37,7 @@
             android:text="@integer/calc_1"
             android:layout_row="0"
             android:layout_column="0"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/button2"
@@ -45,7 +47,7 @@
             android:text="@integer/calc_2"
             android:layout_row="0"
             android:layout_column="1"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/button3"
@@ -55,7 +57,7 @@
             android:text="@integer/calc_3"
             android:layout_row="0"
             android:layout_column="2"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/buttonClear"
@@ -65,7 +67,7 @@
             android:text="@string/calc_clear"
             android:layout_row="0"
             android:layout_column="3"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
         
         <Button
             android:id="@+id/buttonClearAll"
@@ -75,7 +77,7 @@
             android:text="@string/calc_clear_all"
             android:layout_row="0"
             android:layout_column="4"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/button4"
@@ -85,7 +87,7 @@
             android:text="@integer/calc_4"
             android:layout_row="1"
             android:layout_column="0"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/button5"
@@ -95,7 +97,7 @@
             android:text="@integer/calc_5"
             android:layout_row="1"
             android:layout_column="1"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/button6"
@@ -105,7 +107,7 @@
             android:text="@integer/calc_6"
             android:layout_row="1"
             android:layout_column="2"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/buttonPlus"
@@ -115,7 +117,7 @@
             android:text="@string/calc_plus"
             android:layout_row="1"
             android:layout_column="3"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/buttonMinus"
@@ -125,7 +127,7 @@
             android:text="@string/calc_minus"
             android:layout_row="1"
             android:layout_column="4"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/button7"
@@ -135,7 +137,7 @@
             android:text="@integer/calc_7"
             android:layout_row="2"
             android:layout_column="0"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/button8"
@@ -145,7 +147,7 @@
             android:text="@integer/calc_8"
             android:layout_row="2"
             android:layout_column="1"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/button9"
@@ -155,7 +157,7 @@
             android:text="@integer/calc_9"
             android:layout_row="2"
             android:layout_column="2"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/buttonMult"
@@ -165,7 +167,7 @@
             android:text="@string/calc_star"
             android:layout_row="2"
             android:layout_column="3"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/buttonDiv"
@@ -175,7 +177,7 @@
             android:text="@string/calc_slash"
             android:layout_row="2"
             android:layout_column="4"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/button0"
@@ -185,7 +187,7 @@
             android:text="@integer/calc_0"
             android:layout_row="3"
             android:layout_column="0"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/buttonDot"
@@ -195,7 +197,7 @@
             android:text="@string/calc_dot"
             android:layout_row="3"
             android:layout_column="1"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/buttonResult"
@@ -205,7 +207,7 @@
             android:text="@string/calc_equal"
             android:layout_row="3"
             android:layout_column="2"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/buttonOpen"
@@ -215,7 +217,7 @@
             android:text="@string/calc_open"
             android:layout_row="3"
             android:layout_column="3"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/buttonClose"
@@ -225,7 +227,7 @@
             android:text="@string/calc_close"
             android:layout_row="3"
             android:layout_column="4"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
 
     </GridLayout>
 
