--- a/res/layout-sw720dp/canvas_default.xml
+++ b/res/layout-sw720dp/canvas_default.xml
@@ -44,7 +44,7 @@
         android:id="@+id/textOption"
         android:layout_above="@+id/gestureOverlayView1"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/eraserOption"
+        android:layout_toLeftOf="@+id/insertImageOption"
         android:src="@drawable/insert_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/gestureOverlayView1"
-        android:layout_toRightOf="@+id/insertImageOption"
+        android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"
         android:contentDescription="@string/insert_image_accept"
         android:scaleType="fitCenter"
@@ -122,8 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/gestureOverlayView1"
-        android:layout_marginLeft="196dp"
-        android:layout_toRightOf="@+id/textOption"
+        android:layout_toLeftOf="@+id/insertContactOption"
         android:adjustViewBounds="true"
         android:contentDescription="@string/insert_image_accept"
         android:scaleType="fitCenter"
