--- a/res/layout/canvas_default.xml
+++ b/res/layout/canvas_default.xml
@@ -8,12 +8,12 @@
 
     <ar.uba.fi.talker.view.Scenario
         android:id="@+id/gestureOverlayView1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/bottom"
         android:layout_alignParentLeft="true"
-        android:saveEnabled="true"
-        android:layout_below="@+id/pencilOption" >
+        android:layout_below="@+id/pencilOption"
+        android:saveEnabled="true" >
 
     </ar.uba.fi.talker.view.Scenario>
 
@@ -22,8 +22,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:src="@drawable/pencil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:scaleType="fitCenter"
 		android:adjustViewBounds="true"
 		android:contentDescription="@null"  />
@@ -33,8 +33,8 @@
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/pencilOption"
         android:src="@drawable/eraser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:scaleType="fitCenter"
 		android:adjustViewBounds="true"
 		android:contentDescription="@string/erase_all_accept"/>
@@ -44,10 +44,10 @@
         android:id="@+id/textOption"
         android:layout_above="@+id/gestureOverlayView1"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/eraserOption"
+        android:layout_toLeftOf="@+id/insertImageOption"
         android:src="@drawable/insert_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:scaleType="fitCenter"
 		android:adjustViewBounds="true"  
 		android:contentDescription="@string/insert_text_accept"/>
@@ -55,8 +55,8 @@
 
     <ImageButton
         android:id="@+id/bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:src="@drawable/sign_add"
@@ -64,8 +64,8 @@
 
     <ImageButton
         android:id="@+id/calculatorOption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_above="@+id/gestureOverlayView1"
         android:layout_toRightOf="@+id/insertContactOption"
         android:adjustViewBounds="true"
@@ -75,8 +75,8 @@
 
     <ImageButton
         android:id="@+id/calendarOption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_above="@+id/gestureOverlayView1"
         android:layout_toRightOf="@+id/calculatorOption"
         android:adjustViewBounds="true"
@@ -86,10 +86,10 @@
 
     <ImageButton
         android:id="@+id/insertContactOption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_above="@+id/gestureOverlayView1"
-        android:layout_toRightOf="@+id/insertImageOption"
+        android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"
         android:contentDescription="@string/insert_image_accept"
         android:scaleType="fitCenter"
@@ -97,8 +97,8 @@
 
     <ImageButton
         android:id="@+id/eraseAllOption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:adjustViewBounds="true"
@@ -108,8 +108,8 @@
 
     <ImageButton
         android:id="@+id/saveAll"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/eraseAllOption"
         android:adjustViewBounds="true"
@@ -119,11 +119,10 @@
 
     <ImageButton
         android:id="@+id/insertImageOption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_above="@+id/gestureOverlayView1"
-        android:layout_marginLeft="196dp"
-        android:layout_toRightOf="@+id/textOption"
+        android:layout_toLeftOf="@+id/insertContactOption"
         android:adjustViewBounds="true"
         android:contentDescription="@string/insert_image_accept"
         android:scaleType="fitCenter"
