--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="dkgrey">#ff444444</color>
     <color name="redcancel">#e74c3c</color>
     <color name="greenok">#2ecc71</color>
+    <color name="lightblueback">#04aeda</color>
     
 </resources>
