[USA-9] Configuraciones con shared preferences

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,12 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string-array name="image_scenario_ids">
-         <item name="casa">@drawable/casa</item>
-         <item name="oficina">@drawable/oficina</item>
-         <item name="escuela">@drawable/escuela</item>
-         <item name="colectivo">@drawable/colectivo</item>
-         <item name="blanco">@drawable/blanco</item>
+    <string-array name="pencilSizeEntries">
+        <item name="8">Chico</item>
+        <item name="10">Mediano</item>
+        <item name="12">Grande</item>
+    </string-array>
+    <string-array name="pencilSizeValues">
+        <item name="8">8</item>
+        <item name="10">10</item>
+        <item name="12">12</item>
+    </string-array>
+    <string-array name="pencilColorEntries">
+        <item name="red">ROJO</item>
+        <item name="blue">AZUL</item>
+        <item name="green">VERDE</item>
+        <item name="black">NEGRO</item>
+        <item name="white">BLANCO</item>
+    </string-array>
+    <string-array name="pencilColorOptionValues">
+        <item name="red">@color/redcancel</item>
+        <item name="blue">@color/blue</item>
+        <item name="green">@color/greenok</item>
+        <item name="black">@color/black</item>
+        <item name="white">@color/white</item>
+    </string-array>
+    <string-array name="textSizeEntries">
+        <item name="8">Chico</item>
+        <item name="10">Mediano</item>
+        <item name="12">Grande</item>
+    </string-array>
+    <string-array name="textSizeValues">
+        <item name="8">8</item>
+        <item name="10">10</item>
+        <item name="12">12</item>
+    </string-array>
+    <string-array name="textColorEntries">
+       <item name="red">@color/redcancel</item>
+        <item name="blue">@color/blue</item>
+        <item name="green">@color/greenok</item>
+        <item name="black">@color/black</item>
+        <item name="white">@color/white</item>
+    </string-array>
+    <string-array name="textColorOptionValues">
+        <item name="red">@color/redcancel</item>
+        <item name="blue">@color/blue</item>
+        <item name="green">@color/greenok</item>
+        <item name="black">@color/black</item>
+        <item name="white">@color/white</item>
+    </string-array>
+    <string-array name="textWidthEntries">
+        <item name="8">Chico</item>
+        <item name="10">Mediano</item>
+        <item name="12">Grande</item>
+    </string-array>
+    <string-array name="textWidthValues">
+        <item name="8">8</item>
+        <item name="10">10</item>
+        <item name="14">14</item>
+    </string-array>
+    <string-array name="eraserSizeEntries">
+        <item name="8">Chico</item>
+        <item name="10">Mediano</item>
+        <item name="12">Grande</item>
+    </string-array>
+    <string-array name="eraserSizeValues">
+        <item name="8">8</item>
+        <item name="10">10</item>
+        <item name="12">12</item>
     </string-array>
 
 </resources>
