--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="blue">#00abea</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
     <color name="dkgrey">#ff444444</color>
     <color name="redcancel">#e74c3c</color>
     <color name="greenok">#2ecc71</color>
