--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -35,11 +35,11 @@
         <item name="12">12</item>
     </string-array>
     <string-array name="textColorEntries">
-       <item name="red">@color/redcancel</item>
-        <item name="blue">@color/blue</item>
-        <item name="green">@color/greenok</item>
-        <item name="black">@color/black</item>
-        <item name="white">@color/white</item>
+        <item name="red">ROJO</item>
+        <item name="blue">AZUL</item>
+        <item name="green">VERDE</item>
+        <item name="black">NEGRO</item>
+        <item name="white">BLANCO</item>
     </string-array>
     <string-array name="textColorOptionValues">
         <item name="red">@color/redcancel</item>
