--- a/res/layout/row_grid.xml
+++ b/res/layout/row_grid.xml
@@ -12,10 +12,10 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:focusable="true" 
-        android:scaleType="centerInside"
+	    android:layout_width="@dimen/thumbWidth"
+    	android:layout_height="@dimen/thumbHeight"
+  		android:adjustViewBounds="true"
+    	android:scaleType="fitXY"
 		android:contentDescription="@string/insert_image_accept"/>
 
     <TextView
